--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </header>
     <section>
         <div class="formContainer">
-            <h2>GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE</h2>
-            <P>Neste evento, você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem precisar contar com a sorte</P>
+            <h2 class="mb">GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE</h2>
+            <P class="mb">Neste evento, você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem precisar contar com a sorte</P>
         <form>
             <input id="name" name"name" type="text" placeholder="Nome">
             <input id="Email" name"Email" type="text" placeholder="Email">
