--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
         </form>
     </div>
     </section>
+    <footer>
+        <img class="picture" src="imagens/Cópia de face.jpg" alt="imagem palestrante">
+        <div class="description">
+            <h3>O palestrante</h3>
+            <p>Carlos Fontana é conhecido por dar palestras que abalam a estrutura do marketing tradicional. Prepara-se para sair do evento com uma nova visão do que é possivel para o seu negôcio decolar</p>
+
+        <p>Formado em Marketing pela Universidade XYZ e fundador da Markup, a empresa vencedora dos últimos 5 prêmios MarketingBr</p>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
