--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
         <div class="formContainer">
             <h2 class="mb">GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE</h2>
             <P class="mb">Neste evento, você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem precisar contar com a sorte</P>
-        <form>
+        <form method="post" action="https://gmail.us20.list-manage.com/subscribe/post?u=752e0ad067cecc23aabf1cbee&amp;id=8cc23a0a71" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <input id="name" name"name" type="text" placeholder="Nome">
-            <input id="Email" name"Email" type="text" placeholder="Email">
-            <select name="place">
+            <input id="email" name"Email" type="text" placeholder="Email">
+            <select name="PLACE">
                 <option value="Pi">Píaui</option> 
                 <option value="SP">São paulo</option>
                 <option value="MG">Minas Gerais</option>
                 <option value="RJ">Rio de Janeiro</option>
             </select>
+             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_752e0ad067cecc23aabf1cbee_8cc23a0a71" tabindex="-1" value=""></div>
             <input type="submit" value="INSCREVA-SE">
         </form>
     </div>
